--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,7 @@
   <button id="logoutBtn" type="button">Logout</button>
 </div>
 
-<script type="module" src="dashboard.js"></script>
+<script type="module" src="dashboard1.js"></script>
 </body>
 </html>
+
